Added a SetResolution() method

--- a/example/Pages/Index.razor
+++ b/example/Pages/Index.razor
@@ -70,7 +70,9 @@
         try
         {
             int selectedIndex = cameras.FindIndex(camera => camera.DeviceId == selectedValue);
+            await cameraEnhancer.SetResolution(640, 480);
             await cameraEnhancer.OpenCamera(cameras[selectedIndex]);
+            
         }
         catch (Exception ex)
         {
